[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "any-tts-api"
version = "1.0"
authors = [
  { name="Brioch", email="134280928+Brioch@users.noreply.github.com" },
]
description = "A simple web API for TTS"
readme = "README.md"
requires-python = "~=3.12.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "chatterbox-tts @ git+https://github.com/Brioch/chatterbox.git@e57234cc8df9871314c67b88149519562f012f84",
    "lmdeploy",
    "librosa",
    "fastaudiosr @ git+https://github.com/ysharma3501/FlashSR.git",
    "ncodec @ git+https://github.com/ysharma3501/FastBiCodec.git",
    "einops",
    "onnxruntime-gpu",
    "torch ~= 2.7.0",
    "torchaudio",
    "omegaconf",
    "ipython",
    "flask>=3.1.2",
    "flask-cors>=6.0.2",
    "dotenv>=0.9.9",
    "pydub>=0.25.1",
    "soundfile>=0.13.1",
    "numpy<2",
]

[project.urls]
Homepage = "https://github.com/Brioch/any-tts-api"

[dependency-groups]
dev = [
    "ruff>=0.14.10",
]
